syntax = "proto3";

import "GS2CErrorCode.proto";
import "GS2CPacket.proto";

option csharp_namespace = "ReplGameProtocol";

/*
    Naming Conventions
*/
message C2GSProtocol
{
    enum OpCode
    {
        None = 0;
        EnterGameServerRequest = 1;
        ReturnToLobbyRequest = 2;
        QuitGameRequest = 3;
        
        SyncPhysicsBodyTransformUpdate = 200;
        SyncPlayerTransformUpdate = 201;
        
        EntityCollisionAction = 202;
        CarryEntityAction = 203;
        DropEntityAction = 204;
    }

    message Packet
    {
        message EnterGameServerRequest
        {
            int32 requestId = 1;
            string authKey = 2;
            int64 clientId = 3;
            int64 rommId = 4;
        }
        
        message SyncPhysicsBodyTransformUpdate
        {
            repeated TransformSyncInfo syncInfos = 1;
        }

        message SyncPlayerTransformUpdate
        {
            int64 clientTick = 1;
            repeated TransformSyncInfo syncInfos = 2;
        }
        
        message EntityCollisionAction
        {
          int32 entityId = 1;
        }
        
        message CarryEntityAction
        {
          int32 entityId = 1;
        }
        
        message DropEntityAction
        {
          int32 entityId = 1;
        }
    }
}
